--- a/index.html
+++ b/index.html
@@ -5,5 +5,46 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <h1>Effective Solutions for Your Business</h1>
+      <button>Order Service</button>
+    </header>
+    <main>
+      <section>
+        <h3>Strategy</h3>
+        <p>
+          Our goal is to identify the business problem to walk away with the
+          perfect and creative solution.
+        </p>
+        <h3>Punctuality</h3>
+        <p>
+          Bring the key message to the brand's audience for the best price
+          within the shortest possible time.
+        </p>
+        <h3>Diligence</h3>
+        <p>
+          Research and confirm brands that present the strongest digital growth
+          opportunities and minimize risk.
+        </p>
+        <h3>Technologies</h3>
+        <p>
+          Design practice focused on digital experiences. We bring forth a deep
+          passion for problem-solving.
+        </p>
+      </section>
+      <section>
+        <h2>Our Team</h2>
+        <ul>
+          <li><img src="" alt="" /></li>
+        </ul>
+      </section>
+    </main>
+    <footer>
+      <p>
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
+    </footer>
+  </body>
 </html>
