--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   </head>
   <body>
     <header>
+      <address>
+        info@devstudio.com<br />
+        +11 (000) 111-11-11
+      </address>
       <h1>Effective Solutions for Your Business</h1>
       <button>Order Service</button>
     </header>
