--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
   </head>
   <body>
     <header>
+      <nav>
+        <ul>
+          <li><a href="">Studio</a></li>
+          <li><a href="">Portfolio</a></li>
+          <li><a href="">Contacts</a></li>
+        </ul>
+      </nav>
       <address>
         info@devstudio.com<br />
         +11 (000) 111-11-11
@@ -40,7 +47,38 @@
       <section>
         <h2>Our Team</h2>
         <ul>
-          <li><img src="" alt="" /></li>
+          <li>
+            <img
+              src="./images/Team Card 1.jpg"
+              alt="Photo of Product Designer Mark Guerrero"
+              width="264"
+              height="380"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/Team Card 2.jpg"
+              alt="Photo of Frontend Developer Tom Ford"
+              width="264"
+              height="380"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/Team Card 3.jpg"
+              alt="Photo of Camila Garcia from Marketing"
+              width="264"
+              height="380"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/Team Card 4.jpg"
+              alt="Photo of UI Designer Daniel Wilson"
+              width="264"
+              height="380"
+            />
+          </li>
         </ul>
       </section>
     </main>
