--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <header>
+      <img src="./images/Logo.svg" />
       <nav>
         <ul>
           <li><a href="">Studio</a></li>
@@ -83,6 +84,7 @@
       </section>
     </main>
     <footer>
+      <img src="./images/Logo.svg" />
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
