--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <header>
-      <img src="./images/Logo.svg" />
+      <img src="./images/Logo.svg" alt="Website Logo" />
       <nav>
         <ul>
           <li><a href="">Studio</a></li>
@@ -15,10 +15,7 @@
           <li><a href="">Contacts</a></li>
         </ul>
       </nav>
-      <address>
-        info@devstudio.com<br />
-        +11 (000) 111-11-11
-      </address>
+      <address>info@devstudio.com +11 (000) 111-11-11</address>
       <h1>Effective Solutions for Your Business</h1>
       <button>Order Service</button>
     </header>
@@ -50,7 +47,7 @@
         <ul>
           <li>
             <img
-              src="./images/Team Card 1.jpg"
+              src="./images/Team-Card-1.jpg"
               alt="Photo of Product Designer Mark Guerrero"
               width="264"
               height="380"
@@ -58,7 +55,7 @@
           </li>
           <li>
             <img
-              src="./images/Team Card 2.jpg"
+              src="./images/Team-Card-2.jpg"
               alt="Photo of Frontend Developer Tom Ford"
               width="264"
               height="380"
@@ -66,7 +63,7 @@
           </li>
           <li>
             <img
-              src="./images/Team Card 3.jpg"
+              src="./images/Team-Card-3.jpg"
               alt="Photo of Camila Garcia from Marketing"
               width="264"
               height="380"
@@ -74,7 +71,7 @@
           </li>
           <li>
             <img
-              src="./images/Team Card 4.jpg"
+              src="./images/Team-Card-4.jpg"
               alt="Photo of UI Designer Daniel Wilson"
               width="264"
               height="380"
@@ -84,7 +81,7 @@
       </section>
     </main>
     <footer>
-      <img src="./images/Logo.svg" />
+      <img src="./images/Logo.svg" alt="Website Logo" />
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
