--- a/index.html
+++ b/index.html
@@ -47,35 +47,43 @@
         <ul>
           <li>
             <img
-              src="./images/Team-Card-1.jpg"
+              src="./images/img.jpg"
               alt="Photo of Product Designer Mark Guerrero"
               width="264"
-              height="380"
+              height="260"
             />
+            <h3>Mark Guerrero</h3>
+            <p>Product Designer</p>
           </li>
           <li>
             <img
-              src="./images/Team-Card-2.jpg"
+              src="./images/img(1).jpg"
               alt="Photo of Frontend Developer Tom Ford"
               width="264"
-              height="380"
+              height="260"
             />
+            <h3>Tom Ford</h3>
+            <p>Frontend Developer</p>
           </li>
           <li>
             <img
-              src="./images/Team-Card-3.jpg"
+              src="./images/img(2).jpg"
               alt="Photo of Camila Garcia from Marketing"
               width="264"
-              height="380"
+              height="260"
             />
+            <h3>Camila Garcia</h3>
+            <p>Marketing</p>
           </li>
           <li>
             <img
-              src="./images/Team-Card-4.jpg"
+              src="./images/img(3).jpg"
               alt="Photo of UI Designer Daniel Wilson"
               width="264"
-              height="380"
+              height="260"
             />
+            <h3>Daniel Wilson</h3>
+            <p>UI Designer</p>
           </li>
         </ul>
       </section>
