--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <header>
-      <img src="./images/Logo.svg" alt="Website Logo" />
+      <a href="./images/Logo.svg">Website Logo</a>
       <nav>
         <ul>
           <li><a href="">Studio</a></li>
@@ -15,9 +15,12 @@
           <li><a href="">Contacts</a></li>
         </ul>
       </nav>
-      <address>info@devstudio.com +11 (000) 111-11-11</address>
+      <address>
+        info@devstudio.com <br />
+        +11 (000) 111-11-11
+      </address>
       <h1>Effective Solutions for Your Business</h1>
-      <button>Order Service</button>
+      <button type="button">Order Service</button>
     </header>
     <main>
       <section>
@@ -89,7 +92,7 @@
       </section>
     </main>
     <footer>
-      <img src="./images/Logo.svg" alt="Website Logo" />
+      <a href="./images/Logo.svg">Website Logo</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
