--- a/index.html
+++ b/index.html
@@ -16,8 +16,12 @@
         </ul>
       </nav>
       <address>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a><br />
-        <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+        <ul>
+          <li>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a><br />
+          </li>
+          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        </ul>
       </address>
     </header>
     <main>
@@ -26,6 +30,7 @@
         <button type="button">Order Service</button>
       </section>
       <section>
+        <h2>Core Company Values</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
